--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -5,5 +5,6 @@
       "src": "src/app.js",
       "use": "@vercel/node"
     }
-  ]
+  ],
+  "routes": [{ "src": "/(.*)", "dest": "src/app.js" }]
 }
