--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -6,5 +6,5 @@
       "use": "@vercel/node"
     }
   ],
-  "routes": [{ "src": "/countries/(.*)", "dest": "/src/app.js" }]
+  "routes": [{ "src": "/(.*)", "dest": "/src/app.js" }]
 }
